[gh] add first post && update script and css url to aliyun

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/kiera"]
 	path = themes/kiera
 	url = https://github.com/funkydan2/hugo-kiera.git
+[submodule "public"]
+	path = public
+	url = git@github.com:dixon629/dixon629.github.io.git
+	branch = master
