--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ pygmentsCodeFences = true
     #youtube = "user/username" # or channel/channelname
 
 [params]
-    tagline = "A Hugo theme for creative and technical writing"
+    tagline = "Today is not easy, tomorrow is more difficult, but the day after tomorrow will be wonderful."
     description = "Kiera: A Hugo theme for creative and technical writing."
     #images = [""] #This is used for opengraph/twitter cards.
     customCSS = []  #Optional Customised CSS
